[package]
name = "spiralizer"
version = "0.1.0"
authors = ["Matt Ickstadt <mattico8@gmail.com>"]
description = "Helps create a swirly timelapse gif"
repository = "https://github.com/mattico/spiralizer"
keywords = ["image", "gif"]
license = "MIT"

[dependencies]
clap = "2"
image = "0.10"
memmap = "0.4"
pbr = "0.3"
tempdir = "0.3"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
