[package]
name = "spiralizer"
version = "0.1.0"
authors = ["Matt Ickstadt <mattico8@gmail.com>"]
description = "Helps create a swirly timelapse gif"
repository = "https://github.com/mattico/spiralizer"
keywords = ["image", "gif"]
license = "MIT"
edition = "2018"

[dependencies]
clap = "2"
image = "0.23"
memmap = "0.7"
pbr = "1"
tempfile = "3"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
